--- a/HospitalManagement/Views/Shared/_MyAdminLayout.cshtml
+++ b/HospitalManagement/Views/Shared/_MyAdminLayout.cshtml
@@ -63,7 +63,7 @@
                             </a>
                         </li>
                         <li class="nav-item @(ViewContext.RouteData.Values["controller"]?.ToString() == "ManageRole" ? "active" : "")">
-                            <a asp-controller="ManageRole" asp-action="Index">
+                            <a asp-controller="Role" asp-action="Index">
                                 <i class="fas fa-user-shield"></i>
                                 <p>Role</p>
                             </a>
