--- a/HospitalManagement/Views/Shared/_NavbarLayout.cshtml
+++ b/HospitalManagement/Views/Shared/_NavbarLayout.cshtml
@@ -62,8 +62,8 @@
                                 <p>User</p>
                             </a>
                         </li>
-                        <li class="nav-item @(ViewContext.RouteData.Values["controller"]?.ToString() == "ManageRole" ? "active" : "")">
-                            <a asp-controller="ManageRole" asp-action="Index">
+                        <li class="nav-item @(ViewContext.RouteData.Values["controller"]?.ToString() == "Role" ? "active" : "")">
+                            <a asp-controller="Role" asp-action="Index">
                                 <i class="fas fa-user-shield"></i>
                                 <p>Role</p>
                             </a>
